; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwmon/extr_sht15.c_sht15_send_cmd.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwmon/extr_sht15.c_sht15_send_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sht15_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sht15_data*, i32)* @sht15_send_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sht15_send_cmd(%struct.sht15_data* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sht15_data*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.sht15_data* %0, %struct.sht15_data** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.sht15_data*, %struct.sht15_data** %4, align 8
  %8 = call i32 @sht15_transmission_start(%struct.sht15_data* %7)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* %6, align 4
  store i32 %12, i32* %3, align 4
  br label %19

13:                                               ; preds = %2
  %14 = load %struct.sht15_data*, %struct.sht15_data** %4, align 8
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @sht15_send_byte(%struct.sht15_data* %14, i32 %15)
  %17 = load %struct.sht15_data*, %struct.sht15_data** %4, align 8
  %18 = call i32 @sht15_wait_for_response(%struct.sht15_data* %17)
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %13, %11
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @sht15_transmission_start(%struct.sht15_data*) #1

declare dso_local i32 @sht15_send_byte(%struct.sht15_data*, i32) #1

declare dso_local i32 @sht15_wait_for_response(%struct.sht15_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
